--- a/index.html
+++ b/index.html
@@ -3,46 +3,53 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>画板</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <canvas id="canvas" width="100" height="100"></canvas>
     <script>
-        let canvas = document.getElementById("canvas");
-        canvas.width = document.documentElement.clientWidth
-        canvas.height = document.documentElement.clientHeight
-        let ctx = canvas.getContext("2d");
+      let canvas = document.getElementById("canvas");
+      canvas.width = document.documentElement.clientWidth;
+      canvas.height = document.documentElement.clientHeight;
+      let ctx = canvas.getContext("2d");
+      ctx.fillStyle = "yellow";
+      ctx.strokeStyle = "black";
 
-        let painting = false
+      let painting = false;
 
-
-        ctx.fillStyle = "black";
-        ctx.strokeStyle = 'none'
-
+      var isTouchDevice = "ontouchstart" in document.documentElement;
+      if (isTouchDevice) {
+        canvas.ontouchmove = (e) => {
+          let x = e.touches[0].clientX;
+          let y = e.touches[0].clientY;
+          ctx.beginPath();
+          ctx.arc(x, y, 10, 0, 2 * Math.PI);
+          ctx.stroke();
+          ctx.fill();
+        };
+      } else {
         canvas.onmousedown = () => {
-            painting = true
-        }
+          painting = true;
+        };
 
-        canvas.onmousemove = (e) => {
-            if (painting === true) {
-                ctx.beginPath();
-                ctx.arc(e.clientX, e.clientY, 10, 0, 2 * Math.PI);
-                ctx.stroke();
-                ctx.fill();
-            } else {
-                console.log('什么都不做')
-            }
-        }
+        canvas.onmousemove = (x) => {
+          if (painting === true) {
+            ctx.beginPath();
+            ctx.arc(x.clientX, x.clientY, 10, 0, 2 * Math.PI);
+            ctx.stroke();
+            ctx.fill();
+          } else {
+            console.log("什么都不做");
+          }
+        };
 
         canvas.onmouseup = () => {
-            painting = false
-        }
-
-
+          painting = false;
+        };
+      }
     </script>
-</body>
-
+  </body>
 </html>
