--- a/index.html
+++ b/index.html
@@ -17,30 +17,42 @@
       let ctx = canvas.getContext("2d");
       ctx.fillStyle = "yellow";
       ctx.strokeStyle = "black";
+      ctx.lineCap = "round";
+      ctx.lineWidth = 5;
 
       let painting = false;
+      let last;
+
+      function drawLine(x1, y1, x2, y2) {
+        ctx.beginPath();
+        ctx.moveTo(x1, y1);
+        ctx.lineTo(x2, y2);
+        ctx.stroke();
+      }
 
       var isTouchDevice = "ontouchstart" in document.documentElement;
       if (isTouchDevice) {
+        canvas.ontouchstart = (e) => {
+          let x = e.touches[0].clientX;
+          let y = e.touches[0].clientY;
+          last = [x, y];
+        };
         canvas.ontouchmove = (e) => {
           let x = e.touches[0].clientX;
           let y = e.touches[0].clientY;
-          ctx.beginPath();
-          ctx.arc(x, y, 10, 0, 2 * Math.PI);
-          ctx.stroke();
-          ctx.fill();
+          drawLine(last[0], last[1], x, y);
+          last = [x, y];
         };
       } else {
-        canvas.onmousedown = () => {
+        canvas.onmousedown = (e) => {
           painting = true;
+          last = [e.clientX, e.clientY];
         };
 
-        canvas.onmousemove = (x) => {
+        canvas.onmousemove = (e) => {
           if (painting === true) {
-            ctx.beginPath();
-            ctx.arc(x.clientX, x.clientY, 10, 0, 2 * Math.PI);
-            ctx.stroke();
-            ctx.fill();
+            drawLine(last[0], last[1], e.clientX, e.clientY);
+            last = [e.clientX, e.clientY];
           } else {
             console.log("什么都不做");
           }
